# car

./: Cargo.toml  LICENSE  README.md
algo/: README.md
car_cli/: Cargo.toml
car_cli/src/: extract.rs  lib.rs  list.rs
car_cli/src/create/: brotli.rs  bzip2.rs  gzip.rs  lz4.rs  mod.rs  snap.rs  tar.rs  xz.rs  zstd.rs
car_compress/: Cargo.toml  README.md
car_compress/algo/: README.md
car_compress/algo/brotli2-rs/brotli-sys/brotli/: appveyor.yml
car_compress/algo/brotli2-rs/src/: bufread.rs  lib.rs  read.rs  stream.rs  write.rs
car_compress/algo/bzip2-rs/src/: bufread.rs  lib.rs  mem.rs  read.rs  write.rs
car_compress/algo/flate2-rs/src/: bufreader.rs  crc.rs  deflate.rs  ffi.rs  gz.rs  lib.rs  mem.rs  zio.rs  zlib.rs
car_compress/algo/flate2-rs/tests/: gunzip.rs
car_compress/algo/lz4-rs/lz4-sys/src/: lib.rs
car_compress/algo/lz4-rs/src/: decoder.rs  encoder.rs  lib.rs  liblz4.rs
car_compress/algo/lzw/examples/: lzw-compress.rs  lzw-decompress.rs
car_compress/algo/lzw/src/: bitstream.rs  lib.rs  lzw.rs
car_compress/algo/rust-snappy/src/: compress.rs  crc32.rs  decompress.rs  error.rs  frame.rs  lib.rs  tag.rs  tests.rs
car_compress/algo/rust-snappy/szip/src/: main.rs
car_compress/algo/xz2-rs/: .travis.yml  Cargo.toml  README.md  appveyor.yml
car_compress/algo/xz2-rs/lzma-sys/: Cargo.toml  build.rs
car_compress/algo/xz2-rs/lzma-sys/src/: lib.rs
car_compress/algo/xz2-rs/lzma-sys/xz-5.2.2/WindowsFormsApplication1/: WindowsFormsApplication1.csproj
car_compress/algo/xz2-rs/lzma-sys/xz-5.2.2/WindowsFormsApplication1/Properties/: AssemblyInfo.cs
car_compress/algo/xz2-rs/lzma-sys/xz-5.2.2/windows/: liblzma.vcxproj  liblzma_dll.vcxproj
car_compress/algo/xz2-rs/src/: bufread.rs  lib.rs  read.rs  stream.rs  write.rs
car_compress/algo/xz2-rs/systest/: Cargo.toml  build.rs
car_compress/algo/xz2-rs/systest/src/: main.rs
car_compress/algo/zstd-rs/examples/: stream.rs  train.rs  zstdcat.rs
car_compress/algo/zstd-rs/src/: build.rs  dict.rs  lib.rs  ll.rs
car_compress/algo/zstd-rs/src/block/: compressor.rs  decompressor.rs  mod.rs
car_compress/algo/zstd-rs/src/stream/: decoder.rs  encoder.rs  mod.rs
car_compress/src/: comp.rs  header.rs  lib.rs
car_compress/src/cli/: extract.rs  list.rs  mod.rs
car_compress/src/cli/create/: lz4.rs  mod.rs  snap.rs  tar.rs  xz.rs
src/: cli.rs  comp.rs  fsinteract.rs  header.rs  main.rs
