[package]
name = "lzma-sys"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
links = "lzma"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/xz2-rs"
homepage = "https://github.com/alexcrichton/xz2-rs"
documentation = "http://alexcrichton.com/xz2-rs"
description = """
Raw bindings to liblzma which contains an implementation of LZMA and xz stream
encoding/decoding.

High level Rust bindings are available in the `xz2` crate.
"""

[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3.26"
filetime = "0.1"
